scribble-cli/src/test/resources/good/efsm/grecursion/Test06b.scr
module good.efsm.grecursion.Test06b;


global protocol Foo(role A, role B)
{
	rec X
	{
		1() from A to B;
		choice at A
		{
			4() from A to B;
			rec Y
			{
				3() from A to B;
				continue X;
			}
		}
		or
		{
			2() from A to B;
		}
	}
}

