scribble-cli/src/test/resources/bad/reach/globals/gdo/Test05a.scr
module bad.reach.globals.gdo.Test05a;


global protocol Foo(role A, role B)
{
	choice at A
	{
		1() from A to B;
		do Foo(A, B);
		3() from A to B;
	} or {
		2() from A to B;
		3() from A to B;
	}
}

